tests/cases/ffi/ok/ffi-c-alias.ari
extern "C" fn c_puts(text: ptr c_char) -> i32 = "puts";

fn main() -> i64 {
  c_puts("ffi-c-alias-ok");
  return 0;
}

