tests/cases/ffi/errors/extern-varargs-empty.ari
extern "C" fn any(...) -> c_int;
